--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.7",
-    "@angular/cdk": "^15.2.9",
+    "@angular/cdk": "^16.2.6",
     "@angular/common": "^16.2.7",
     "@angular/compiler": "^16.2.7",
     "@angular/core": "^16.2.7",
     "@angular/forms": "^16.2.7",
-    "@angular/material": "^15.2.9",
+    "@angular/material": "^16.2.6",
     "@angular/platform-browser": "^16.2.7",
     "@angular/platform-browser-dynamic": "^16.2.7",
     "@angular/router": "^16.2.7",
     "@auth0/angular-jwt": "^5.1.2",
     "primeng": "^16.4.1",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
+    "rxjs": "^7.8.1",
+    "tslib": "^2.6.2",
     "zone.js": "~0.13.3"
   },
   "devDependencies": {
